infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsminoro-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minoro.witsense.com.br
        - api.minoro.witsense.com.br
      secretName: wsminoro-tls
  rules:
    - host: minoro.witsense.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: link-router
                port:
                  number: 80
    - host: api.minoro.witsense.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: link-admin
                port:
                  number: 80
